# apeiro

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Cargo.toml  LICENSE  README.md  go.mod  go.sum  plugins.json  restengine.go  restengine_test.go  runtime.go  value_types.go  value_types_cases.go  value_types_test.go  watcher.go
.github/workflows/: benchmark.yml  release.yml  rust.yml
aia/: aia.go
aia/fine_tuning/: daily_email_good_morning.ts  email_quote_responder.ts  fine_tuning.go  original.txt  slack_quote_responder.ts  sum_of_two_numbers.ts
apeiro_port_mqtt/: Cargo.toml
apeiro_port_mqtt/src/: lib.rs
apeiro_port_syslog/: Cargo.toml
apeiro_port_syslog/src/: lib.rs  syslog.rs
apeirod/: Cargo.toml
apeirod/benches/: snapshot.rs
apeirod/src/: handlers.rs  main.rs
apeirod/src/plugins/: mod.rs  mqtt.rs
benches/: snapshot.rs
blockly/: blockly.xml  blocks.go  blocks_colour.go  blocks_control.go  blocks_list.go  blocks_logic.go  blocks_number.go  blocks_procedure.go  blocks_test.go  blocks_text.go  blocks_variable.go  generators_test.go  interpreter.go  interpreter_test.go  tree2blockly.go  tree2blockly_test.go  utils_for_test.go  value.go  value_test.go
blockly/xmltests/: README.md  loops2.xml  text.xml
cli/: Cargo.toml
cli/src/: cmds.rs  librepl.rs  main.rs  repl.rs
cmd/apeiro/: main.go
cmd/apeirod/: main.go
compiler/: Cargo.toml  bundler_import_map.json  compiler.go  compiler_test.go  helper_test.go  index.ts  modules.go  static_entrypoint.go
compiler/src/: block_analysis.rs  bundle_phase.rs  capture_frames.rs  capture_scopes.rs  compile_phase.rs  decl_to_expr.rs  either_param_to_closure.rs  fn_decl_to_fn_expr.rs  fn_instrument.rs  fn_wrap.rs  for_stmt_to_while_stmt.rs  generator.rs  hide_internal_arguments.rs  lib.rs  stmt_exploder.rs  utils.rs
compiler/src/deprec/: block_analysis.rs  fn_instrument.rs  test_fn_instrument.rs
compiler/src/helpers/: _fn_wrap.js  _new_frame.js  _new_scope.js  _ts_generator.js  mod.rs
compiler/src/tests/: fn_accumulator.ts  fn_bundle.main.ts  fn_generator.ts  fn_instrument.simple.in.ts  fn_instrument.simple.out.js  fn_light_switch.ts  fn_map.ts  fn_max_age.ts  fn_sum_three.ts  fn_timer.ts  fn_util.ts  fn_viber.ts  import_std.ts  io.ts  mod.rs  stripe.ts  test.ts  test_bundle.rs  test_capture_frames.rs  test_capture_scopes.rs  test_decl_to_expr.rs  test_either_param_to_closure.rs  test_fn_decl_to_fn_expr.rs  test_fn_instrument.rs  test_stmt_exploder.rs
compiler/test_fixtures/: import.in.js  import.out.js  multiple_functions.in.js  multiple_functions.out.js  simple.in.js  simple.out.js  yield.in.js  yield.out.js  zod.in.js  zod.out.js
config/: config.go
debugging/: value_types.go  value_types_cases.go  value_types_test.go
ecmatime/: context.ts  decoder.ts  ecmatime.go  ecmatime.js  ecmatime_test.go  encoder.ts  frame.ts  headers.ts  index.ts  secrets.go  suspension.ts  test.ts  zerolog.go
engine/: Cargo.toml
engine/src/: db.rs  db_sqlite.rs  dengine.rs  engine.rs  engine_runtime.ts  eventloop.rs  fs.rs  lib.rs  p2prpc.rs  plugins.rs  v8_helpers.rs
engine/src/plugins2/: mod.rs
engine/src/tests/: counter.js  fn_instrument.simple.in.ts  mod.rs
examples/: add_three_numbers.ts  add_two_numbers.ts  demo.sh  low_level.ts
experiments/: comparisons.go  experiments.go  main_test.go  quickref.ts  runtime_test.go
frontend/: .env.template  README.md  next.config.js  package.json  pnpm-lock.yaml
frontend/components/: App.tsx  Button.tsx  CodeList.tsx  DashboardContent.tsx  FunctionSummary.tsx  Logo.tsx  NavButton.tsx  Navbar.tsx  NonUIInput.tsx  ProcessOverview.tsx  Sidebar.tsx  Source.tsx  ToggleButton.tsx  UserProfile.tsx  extract_pc_to_src_map.tsx  insert_mark.tsx  theme.tsx
frontend/components/EmojiPicker/: Emoji.tsx  EmojiButton.tsx  EmojiPicker.tsx  constants.ts  types.ts
frontend/components/Modules/: FunctionDisplay.tsx  quickstarts.ts
frontend/components/Mounts/: FunctionDisplay.tsx
frontend/components/Quickstart/: CheckboxFilter.tsx  ColorPicker.tsx  ColorPickerOption.tsx  Filter.tsx  FilterActionButtons.tsx  FilterDrawer.tsx  FilterPopover.tsx  MobileFilter.tsx  PriceRangePicker.tsx  PriceTag.tsx  SizePicker.tsx  SizePickerButton.tsx  SortBySelect.tsx  _data.ts  useFilterState.tsx
frontend/components/pages/: DashboardContent.tsx  FunctionDisplay.tsx  FunctionSummary.tsx  ProcessOverview.tsx
frontend/config/: appInfo.ts  backendConfig.ts
frontend/lib/: PCToSrcMapping.tsx  Workspace.ts  appInfo.ts  auth.tsx  backendConfig.ts  extract_pc_to_src_map.tsx  insert_mark.tsx  useLocalStorage.ts  useWorkspace.ts
frontend/pages/: _app.tsx  index.tsx
frontend_rs/: Cargo.toml  build.rs
frontend_rs/src/: lib.rs
go-plugin/: go.mod  go.sum
go-plugin/host/: main.go
go-plugin/printer/: main.go
internal_api/: Cargo.toml
internal_api/src/: lib.rs  proc.rs  step_result.rs
pristined/: Cargo.toml
pristined/benches/: snapshot.rs
pristined/src/: db.rs  handlers.rs  main.rs
repl_experiment/: Cargo.toml
repl_experiment/src/: main.rs  repl.rs
restengine/: aia_handlers.go  auth.go  ext_handlers.go  helpers.go  middleware.go  proc_handlers.go  restengine.go  restengine_test.go  src_handlers.go
runtime/: runtime.go  watcher.go
serde/: Cargo.toml  MemSON.md  class.js  de.rs  error.rs  exp.js  exp2.js  intro.md  keys.rs  lib.rs  payload.rs  ser.rs  serializable.rs  utils.rs
serde/benches/: de.rs  ser.rs
serde/examples/: basic.rs
serde/magic/: buffer.rs  bytestring.rs  detached_buffer.rs  global.rs  mod.rs  rawbytes.rs  string_or_buffer.rs  transl8.rs  u16string.rs  v8slice.rs  value.rs
serde/tests/: de.rs  magic.rs  ser.rs
serde_apeiro_v8/: Cargo.toml  de.rs  lib.rs  payload.rs  ramson.rs  ser.rs  utils.rs
serde_apeiro_v8/tests/: de.rs  ramson.rs
serde_json_matcher/: Cargo.toml  README.md
serde_json_matcher/examples/: simple.rs
serde_json_matcher/src/: lib.rs
src/: engine.rs  lib.rs  main.rs  v8_helpers.rs
src/compiler/: either_param_to_closure.rs  generator.rs  mod.rs  utils.rs
src/engine/: mod.rs
src/tests/: counter.js  mod.rs
(+19 files in other folders)
