[package]
name = "pristine_stepper"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = "3.3.4"
v8 = "0.55.0"
anyhow = "1.0.66"
tokio = { version = "1", features = ["full"] }

[lib]
name = "pristine_stepper"
path = "src/lib.rs"

[[bin]]
name = "pristine_stepper"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_futures", "html_reports"] }

[[bench]]
name = "snapshot"
harness = false
