[package]
name = "pristine_stepper"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = "3.3.4"
v8 = "0.55.0"
anyhow = "1.0.66"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.26", features = ["cargo"] }
# compiler dependencies
better_scoped_tls = "0.1.0"
once_cell = "1.16.0"
rustc-hash = "1.1.0"
swc = "0.232.86"
swc_atoms = "0.4.25"
swc_common = { version = "0.29.14", features = ["tty-emitter"] }
swc_ecma_ast = "0.94.19"
swc_ecma_codegen = "0.127.31"
swc_ecma_parser = { version = "0.122.26", features = ["typescript"] }
swc_ecma_transforms = "0.198.45"
swc_ecma_utils = "0.105.32"
swc_ecma_visit = "0.80.20"
swc_ecmascript = { version = "0.205.76", features = ["transforms", "visit"] }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
swc_ecma_transforms_base = "0.111.55"
tracing = "0.1.37"
is-macro = "0.2.1"

[lib]
name = "pristine_stepper"
path = "src/lib.rs"

[[bin]]
name = "pristine_stepper"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_futures", "html_reports"] }

[[bench]]
name = "snapshot"
harness = false
