[package]
name = "apeiro_port_syslog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
apeiro_engine = { path = "../engine" }
async-trait = "0.1.61"
serde = "1.0.149"
serde_json = "1.0.91"
typetag = "0.2.5"
bytes = "0.4.12"
socket2 = { version = "0.3.9", features = ["reuseport"] }
mio = "^0.6"
chrono = { version = "0.4.6", features = ["serde"] }
