[package]
name = "apeiro_port_syslog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
apeiro_engine = { path = "../engine" }
async-trait = "0.1.61"
bytes = "1.5.0"
chrono = { version = "0.4.6", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
typetag = "0.2.5"
