[package]
name = "apeirod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.0"
anyhow = { workspace = true }
apeiro_engine = { path = "../engine" }
apeiro_frontend_rs = { path = "../frontend_rs" }
apeiro_internal_api = { path = "../internal_api"}
apeiro_port_mqtt = { version = "0.1.0", path = "../apeiro_port_mqtt" }
apeiro_port_syslog = { version = "0.1.0", path = "../apeiro_port_syslog" }
async-stream = "0.3.3"
async-trait = "0.1.60"
clap = { version = "4.0.26", features = ["cargo"] }
console-subscriber = "0.2.0"
env_logger = "0.11.3"
futures = "0.3.25"
futures-core = "0.3.25"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"]}
nanoid = "0.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
rumqttc = { version = "0.24.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
typetag = "0.2.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures", "html_reports"] }
tokio = { version = "1", features = ["full", "time", "tracing"] }

[features]
default = ["mqtt"]
mqtt = ["dep:rumqttc"]
