[package]
name = "pristine_cli"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.26", features = ["cargo", "derive"] }
pristine_engine = { path = "../engine" }
pristine_internal_api = { path = "../internal_api"}
anyhow = "1.0.66"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "^1.0.100", features = ["derive"] }
serde_json = "1.0.89"
cli-table = "0.4.7"
reqwest-eventsource = "0.4.0"
futures = "0.3.25"
