[package]
name = "apeiro_cli"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.26", features = ["cargo", "derive"] }
apeiro_engine = { path = "../engine" }
apeiro_internal_api = { path = "../internal_api"}
anyhow = "1.0.66"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "^1.0.100", features = ["derive"] }
serde_json = "1.0.89"
cli-table = "0.4.7"
reqwest-eventsource = "0.4.0"
futures = "0.3.25"
# deps from repl
apeiro_compiler = { path = "../compiler" }
serde_v8 = { path = "../serde_apeiro_v8"}
actix-web = "4.3.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
nanoid = "0.4.0"
env_logger = "0.10.0"
futures-core = "0.3.25"
async-stream = "0.3.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
rumqttc = { version = "0.19.0", optional = true }
typetag = "0.2.4"
async-trait = "0.1.60"
actix-cors = "0.6.4"
apeiro_port_mqtt = { version = "0.1.0", path = "../apeiro_port_mqtt" }
apeiro_port_syslog = { version = "0.1.0", path = "../apeiro_port_syslog" }
console-subscriber = "0.1.8"
v8 = { version = "0.63.0", default-features = false }

[[bin]]
name = "ap"
path = "src/main.rs"