[package]
name = "apeiro_cli"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
apeiro_engine = { path = "../engine" }
apeiro_frontend_rs = { path = "../frontend_rs" }
apeiro_internal_api = { path = "../internal_api"}
clap = { version = "4.0.26", features = ["cargo", "derive"] }
cli-table = "0.4.7"
futures = "0.3.25"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
reqwest-eventsource = "0.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "ap"
path = "src/main.rs"
