[package]
name = "apeiro_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
better_scoped_tls = "0.1.0"
futures = { version = "0.3.25", features = ["executor"] }
is-macro = "0.2.1"
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["blocking", "rustls-tls"], default-features = false }
rustc-hash = "1.1.0"
serde = "1.0.149"
serde_json = "1.0.91"
swc = "0.242.1"
swc_atoms = "0.4.33"
swc_bundler = "0.196.1"
swc_common = { version = "0.29.27", features = ["tty-emitter"] }
swc_ecma_ast = "0.96.0"
swc_ecma_codegen = "0.129.2"
swc_ecma_loader = "0.41.28"
swc_ecma_minifier = "0.163.1"
swc_ecma_parser = { version = "0.124.1", features = ["typescript"] }
swc_ecma_transforms = "0.201.0"
swc_ecma_transforms_base = "0.114.0"
swc_ecma_utils = "0.107.1"
swc_ecma_visit = "0.82.0"
swc_ecmascript = { version = "0.210.1", features = ["transforms", "visit"] }
swc_node_base = "0.5.8"
tokio = { version = "1.23.0", features = ["macros"] }
tracing = "0.1.37"
url = "2.3.1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
