[package]
name = "apeiro_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = "3.3.4"
v8 = "0.60.0"
anyhow = "1.0.66"
tokio = { version = "1", features = ["full"] }
apeiro_compiler = { path = "../compiler" }
apeiro_internal_api = { path = "../internal_api"}
serde = { version = "^1.0.100", features = ["derive"] }
apeiro_serde = { path = "../serde" }
serde_json = "1.0.89"
nanoid = "0.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
futures-core = "0.3.25"
serde_json_matcher = "0.1.4"
tracing = { version = "0.1", features = ["log-always"] }
serde_v8 = "0.75.0"
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json", "blocking", "rustls-tls"], default-features = false }
sourcemap = "6.2.1"
base64 = "0.21.0"

[dev-dependencies]
tokio-test = "0.4.2"
