[package]
name = "apeiro_engine"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
apeiro_compiler = { path = "../compiler" }
apeiro_internal_api = { path = "../internal_api"}
apeiro_serde = { path = "../serde" }
async-trait = "0.1.61"
base64 = "0.22.1"
brotli = "6.0.0"
chrono = "0.4.23"
futures = "0.3.25"
futures-core = "0.3.25"
nanoid = "0.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
reqwest = { version = "0.12.4", features = ["json", "blocking", "rustls-tls" ], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_matcher = { path = "../serde_json_matcher" }
serde_v8 = { workspace = true }
sha256 = "1.1.1"
sourcemap = "8.0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", 	features=["compat"] }
tracing = { version = "0.1", features = ["log-always"] }
typetag = "0.2.5"
v8 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.2"
