[package]
name = "pristined"
version = "0.1.0"
edition = "2021"

[dependencies]
# v8 = "0.55.0"
# futures = "0.3.25"
# serde = { version = "1.0.147", features =[ "derive" ] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.26", features = ["cargo"] }
pristine_engine = { path = "../engine" }
pristine_internal_api = { path = "../internal_api"}
anyhow = "1.0.66"
serde_json = "1.0.89"
actix-web = "4.2.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
nanoid = "0.4.0"
serde = "1.0.144"
env_logger = "0.10.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_futures", "html_reports"] }

[[bench]]
name = "snapshot"
harness = false
