[package]
name = "pristined"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.26", features = ["cargo"] }
pristine_engine = { path = "../engine" }
pristine_internal_api = { path = "../internal_api"}
anyhow = "1.0.66"
serde_json = "1.0.89"
actix-web = "4.2.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
nanoid = "0.4.0"
serde = { version = "^1.0.100", features = ["derive"] }
env_logger = "0.10.0"
futures-core = "0.3.25"
futures = "0.3.25"
async-stream = "0.3.3"
tracing = "0.1.37"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_futures", "html_reports"] }

[[bench]]
name = "snapshot"
harness = false
