[package]
name = "repl_experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = { version = "0.63.0", default-features = false }
tokio = { version = "1", features = ["full", "time"] }
clap = { version = "4.0.26", features = ["cargo"] }
apeiro_engine = { path = "../engine" }
apeiro_compiler = { path = "../compiler" }
apeiro_internal_api = { path = "../internal_api"}
serde_v8 = { path = "../serde_apeiro_v8"}
anyhow = "1.0.66"
serde_json = "1.0.89"
actix-web = "4.3.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
nanoid = "0.4.0"
serde = { version = "^1.0.100", features = ["derive"] }
env_logger = "0.10.0"
futures-core = "0.3.25"
futures = "0.3.25"
async-stream = "0.3.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
rumqttc = { version = "0.19.0", optional = true }
typetag = "0.2.4"
async-trait = "0.1.60"
actix-cors = "0.6.4"
apeiro_port_mqtt = { version = "0.1.0", path = "../apeiro_port_mqtt" }
apeiro_port_syslog = { version = "0.1.0", path = "../apeiro_port_syslog" }
console-subscriber = "0.1.8"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_futures", "html_reports"] }
tokio = { version = "1", features = ["full", "time", "tracing"] }

[features]
default = ["mqtt"]
mqtt = ["dep:rumqttc"]
