# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.

[package]
name = "serde_pristine"
version = "0.75.0"
readme = "README.md"
description = "Rust to V8 serialization and deserialization"

[lib]
path = "lib.rs"

[dependencies]
better_scoped_tls = "0.1.0"
bytes = "=1.2.1"
derive_more = "0.99.17"
serde = { version = "^1.0.100", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "=1.0.91"
serde_v8 = "0.75.0"
smallvec = { version = "1.8", features = ["union"] }
v8 = { version = "0.60.0", default-features = false }

[dev-dependencies]
bencher = "0.1"
serde_json = "=1.0.91"
