# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.

[package]
name = "apeiro_serde"
version = "0.75.0"
readme = "README.md"
description = "Rust to V8 serialization and deserialization"

[lib]
path = "lib.rs"

[dependencies]
better_scoped_tls = "0.1.0"
bytes = "1.5.0"
derive_more = "0.99.17"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
serde_v8 = { workspace = true }
smallvec = { version = "1.8", features = ["union"] }
tracing = "0.1.37"
v8 = { workspace = true }

[dev-dependencies]
bencher = "0.1"

